<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar You</string>
    <string name="title">YOUR AGE ON OTHER PLANETS</string>
    <string name="enter_age">Enter your age</string>
    <string name="age_hint">age</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="calculate">Calculate</string>
    <string name="lucky">I\'m Feeling Lucky</string>

</resources>
